fix logo on mobile

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -42,7 +42,6 @@ input[type=text], input[type=email], input[type=url], input[type=password]
 h1
   font-size: 198px
   font-weight: 700
-  text-align: center
 
 h2, h3, h4
   font-weight: 400
