--- a/app/assets/stylesheets/m_hackathon.css.sass
+++ b/app/assets/stylesheets/m_hackathon.css.sass
@@ -4,8 +4,11 @@
 
 .hackathon-title
   background-color: white
-  color: #4dba6d    
+  color: #4dba6d   
+  text-align: center 
   +nowrap
+  +at-breakpoint($mobile)
+    color: transparent      
 
 .hackathon-social
   background-color: #f0c419 // yellow
